fixed header alignment, added table to extrainventory page

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body {
     background: url(../img/top_decoration.png) repeat-x top;
 }
-
+ 
 a {
     color: #BB1010;
 }
@@ -30,12 +30,12 @@ img.frig {
 
 .logo {
     padding-top: 10px;
-    height: 150px;
-    width: 150px;
+    height: 200px;
+    width: 200px;
 }
 
 .contact {
-    padding-bottom: 80px;
+    padding-top: 20px;
     font-size: 12px;
     /* text-align: right; */
 }
